--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -33,10 +33,10 @@
 
             if (overDraftsubcategory.transactionsValue > overDraftsubcategory.monthlyPlannedBudget)
             {
-                <button class="overdraftBtn" @onclick="@(()=>checkOverdraft(overDraftsubcategory.id))">
+                <div class="overdraftBtn">
                     <span>חריגה</span>
                     <img src="../css/images/overdtaft.svg" />
-                </button>
+                </div>
                 break;
             }
         }
@@ -83,10 +83,10 @@
                 else
                 {
                     @*     לשנות את טקסט הכפתור אחרי שנוסיף עיצוב dis*@
-                    <button class="custom-btn" @onclick="getUserCategories" disabled>
+                    <button class="custom-btn" @onclick="getUserCategories" disabled style="opacity:60%;">
                         <div class="btn-content">
                             <div class="textAndLine">
-                                <span class="btn-text">תת קטגוריה חדשה dis</span>
+                                <span class="btn-text">תת קטגוריה חדשה </span>
                                 <div class="subCatLine">
                                 </div>
                             </div>
@@ -115,20 +115,9 @@
                         {
                             subcategory.monthlyPlannedBudget = 0;
                         }
-                        <div>
-                            @if (subcategory.id == overDraftSubCategory.id)
-                            {
-                                <div class="budget-card @(isFirstItem ? "first" : "")">
-                                    <SubCategoryComponent subCategoryTitle="@subcategory.subCategoryTitle" totalSpendings="@subcategory.transactionsValue" budget="@subcategory.monthlyPlannedBudget" subCategoryIDToGet="@subcategory.id" userID="@userID" subCatTakenBudget="updateTakenSubCatBudget" refreshSubCats="getSubCategories" updateEditedSubCat="updateEditedSubCat" categoryID="@Category.id" subCatDeleted="deleteSubCat" categoryTitle="@Category.categroyTitle" categoryTypeIndicator="@categoryTypeIndicator" updatedStreakStat="updateStreak" subCatColor="@categoryColor" overdraftNotTreated="@overdraftNotTreated" openOverdraftOverlay="@(()=> checkOverdraft(subcategory.id))" updateTransactionSum="updateTransSumInStatTable"></SubCategoryComponent>
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="budget-card @(isFirstItem ? "first" : "")">
-                                    <SubCategoryComponent subCategoryTitle="@subcategory.subCategoryTitle" totalSpendings="@subcategory.transactionsValue" budget="@subcategory.monthlyPlannedBudget" subCategoryIDToGet="@subcategory.id" userID="@userID" subCatTakenBudget="updateTakenSubCatBudget" refreshSubCats="getSubCategories" updateEditedSubCat="updateEditedSubCat" categoryID="@Category.id" subCatDeleted="deleteSubCat" categoryTitle="@Category.categroyTitle" categoryTypeIndicator="@categoryTypeIndicator" updatedStreakStat="updateStreak" subCatColor="@categoryColor" openOverdraftOverlay="@(()=> checkOverdraft(subcategory.id))" updateTransactionSum="updateTransSumInStatTable"></SubCategoryComponent>
-                                </div>
-                            }
 
+                        <div class="budget-card @(isFirstItem ? "first" : "")">
+                            <SubCategoryComponent subCategoryTitle="@subcategory.subCategoryTitle" totalSpendings="@subcategory.transactionsValue" budget="@subcategory.monthlyPlannedBudget" subCategoryIDToGet="@subcategory.id" userID="@userID" subCatTakenBudget="updateTakenSubCatBudget" refreshSubCats="getSubCategories" updateEditedSubCat="updateEditedSubCat" categoryID="@Category.id" subCatDeleted="deleteSubCat" categoryTitle="@Category.categroyTitle" categoryTypeIndicator="@categoryTypeIndicator" updatedStreakStat="updateStreak" subCatColor="@categoryColor"></SubCategoryComponent>
                         </div>
 
                         isFirstItem = false;
@@ -276,154 +265,6 @@
     getSearchedSubCat();
 }
 
-@if (overdraftDetected)
-{
-    <div class="overlay">
-        <div class="outerOverdraft">
-            <div class="overdraftWindow">
-
-                <div class="outerText">
-                    <h3 class="titleText">חרגת...</h3>
-
-                    <div>נראה שהוצאת ב @overDraftSubCategory.subCategoryTitle @closeOverdraftOpts[closeOverdraftOpts.Count-1].remainingBudget ₪ </div>
-                    <div>שזה <span><b>@currentGap ₪</b></span> יותר </div>
-                    <div>מהתקציב שהגדרת: @closeOverdraftOpts[closeOverdraftOpts.Count-1].monthlyPlannedBudget ₪ </div>
-                    <div>כדאי להגדיל את התקציב.</div>
-                    <div><b>הסכום שאני רוצה להעביר:</b></div>
-                    <div class="outerCurrentGap">
-                        <input class="currentGap" type="number" @bind="currentGap" min="@currentGap" />
-                        <span class="currency-symbolOverDraft">₪</span>
-                        <div class="lineBetweenOverdraft"></div>
-                    </div>
-
-                    <div>מאיזו תת קטגוריה יועבר הסכום?</div>
-                </div>
-                <div class="outerTranferTable">
-
-                    <div class="outerFromSubCats">
-                        <span style="font-weight:700;">העברה מ:</span>
-                        <div class="outerDropAndOptions">
-                            <div class="outerDropAndPoly" @onclick="()=>openSubCatsOptions =! openSubCatsOptions">
-                                <div class="subCatsDrop">
-                                    <span>@chosenSubCategory.subCategoryTitle</span>
-                                    <span class="accordionPoly"><img style="width:7vw;" src="../css/images/arrow3.svg" /></span>
-                                </div>
-
-                            </div>
-                            @if (openSubCatsOptions)
-                            {
-                                <div class="subCatsDropDown">
-                                    @foreach (OverBudgetToShow subcategoryOpt in closeOverdraftOpts)
-                                    {
-                                        @if (subcategoryOpt.id != overDraftSubCategory.id)
-                                        {
-                                            <div @onclick="()=>HandleChange(subcategoryOpt)">
-                                                @subcategoryOpt.subCategoryTitle
-                                            </div>
-                                        }
-                                    }
-                                </div>
-
-                            }
-                        </div>
-                        <div class="outerBudgets">
-                            <div class="outerBudgetTitle">
-                                <div style="font-weight: 600;">תקציב:</div>
-                                <div class="titleDivder"></div>
-                            </div>
-                            @if (string.IsNullOrEmpty(chosenSubCategory.subCategoryTitle))
-                            {
-                                <div>
-                                    נוכחי: 0 <span>₪</span>
-
-                                </div>
-                                <div>
-                                    עתידי: 0 <span>₪</span>
-                                </div>
-                            }
-                            else
-                            {
-                                <div>
-                                    נוכחי: @chosenSubCategory.monthlyPlannedBudget
-                                    <span>₪</span>
-                                </div>
-                                <div>
-                                    עתידי: @(
-                                 chosenSubCategory.monthlyPlannedBudget - currentGap
-                                 )
-                                    <span>₪</span>
-                                </div>
-                            }
-                        </div>
-
-                    </div>
-                    <div class="outerToSubCat">
-
-                        <span style="font-weight:700;">העברה ל:</span>
-                        <div class="outerDropAndOptions">
-                            <div class="outerDropAndPoly">
-                                <div class="subCatsDrop" style="justify-content: center;">
-                                    @(
-                                        overDraftSubCategory.subCategoryTitle = closeOverdraftOpts[closeOverdraftOpts.Count - 1].subCategoryTitle
-                                        )
-
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="outerBudgets">
-                            <div class="outerBudgetTitle">
-                                <div style="font-weight: 600;">תקציב:</div>
-                                <div class="titleDivder"></div>
-                            </div>
-                            @if (string.IsNullOrEmpty(chosenSubCategory.subCategoryTitle))
-                            {
-                                <div>
-                                    נוכחי: @(
-                                 closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget)
-                                    <span>₪</span>
-                                </div>
-                                <div>
-                                    עתידי: 0 <span>₪</span>
-                                </div>
-                            }
-                            else
-                            {
-                                <div>
-                                    נוכחי: @(
-                                 closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget)
-                                    <span>₪</span>
-                                </div>
-                                <div>
-                                    עתידי: @(
-                                 closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget + currentGap)
-                                    <span>₪</span>
-                                </div>
-
-                            }
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="outerBtns">
-
-                    @if (chosenSubCategory == null)
-                    {
-                        <button class="primery-buttonOverDraft" @onclick="manageBudgetsToTranfer" disabled>העברה</button>
-                    }
-                    else
-                    {
-                        <button class="primery-buttonOverDraft" @onclick="manageBudgetsToTranfer">העברה</button>
-                    }
-                    <button class="thirdBtn" @onclick="NotTreatedOverdraft">אטפל בהמשך</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
-}
 
 @code {
 
@@ -528,9 +369,9 @@
     string titleInput = "";
     int titleInputLength = 0;
 
-    bool overdraftDetected = false;
-    bool overdraftOverlayOpen = false;
-    bool overdraftNotTreated = false;
+    //bool overdraftDetected = false;
+    //bool overdraftOverlayOpen = false;
+    //bool overdraftNotTreated = false;
     bool openSubCatsOptions = false;
     OverBudgetToShow chosenSubCategory = new OverBudgetToShow();
 
@@ -803,23 +644,6 @@
                     {
                         updateBudget.InvokeAsync(tempBudget);
                     }
-
-                    //checking overdraft:
-                    for (int i = 0; i < subCategories.Count; i++)
-                    {
-                        if (subCategories[i].id == editedSubCat.id)
-                        {
-                            if (editedSubCat.monthlyPlannedBudget.HasValue)
-                            {
-                                if (editedSubCat.monthlyPlannedBudget.Value < subCategories[i].transactionsValue)
-                                {
-                                    //alert overdraft pop up
-
-                                    checkOverdraft(subCategories[i].id);
-                                }
-                            }
-                        }
-                    }
                 }
 
             }
@@ -898,120 +722,7 @@
         titleInputLength = titleInput.Length;
     }
     //--------------------//
-    List<OverBudgetToShow> closeOverdraftOpts = new List<OverBudgetToShow>();
-    double currentGap = 0;
+
     OverBudgetToShow overDraftSubCategory = new OverBudgetToShow();
 
-    public async Task checkOverdraft(int subCatID)
-    {
-        var getOverdraftDetails= await Http.GetAsync("api/Present/GetSubCategory/"+subCatID);
-        if (getOverdraftDetails.IsSuccessStatusCode)
-        {
-            SubCategoryToShow tempSub = await getOverdraftDetails.Content.ReadFromJsonAsync<SubCategoryToShow>();
-            if (tempSub != null)
-            {
-                overDraftSubCategory.id = subCatID;
-                overDraftSubCategory.subCategoryTitle = tempSub.subCategoryTitle;
-
-                overDraftSubCategory.remainingBudget = tempSub.transactionsValue;
-                if (tempSub.monthlyPlannedBudget.HasValue)
-                {
-                    overDraftSubCategory.monthlyPlannedBudget = tempSub.monthlyPlannedBudget.Value;
-                }
-            }
-        }
-        
-        var overdraftRes = await Http.GetAsync("api/Transactions/showOverdraft/" + subCatID + "/" + userID);
-        if (overdraftRes.IsSuccessStatusCode)
-        {
-            overdraftDetected = true;
-            overdraftOverlayOpen = true;
-            closeOverdraftOpts = new List<OverBudgetToShow>();
-            closeOverdraftOpts = await overdraftRes.Content.ReadFromJsonAsync<List<OverBudgetToShow>>();
-            currentGap = (closeOverdraftOpts[closeOverdraftOpts.Count - 1].remainingBudget) - (closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget);
-
-            overDraftSubCategory.id = closeOverdraftOpts[closeOverdraftOpts.Count - 1].id;
-            overDraftSubCategory.monthlyPlannedBudget = closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget;
-            chosenSubCategory = new OverBudgetToShow();
-        }
-        else
-        {
-            Console.WriteLine("No overdraft detected");
-
-        }
-    }
-
-    private void HandleChange(OverBudgetToShow chosenSubCat)
-    {
-        /*var selectedTitle = e.Value.ToString()*/
-
-        chosenSubCategory = chosenSubCat;
-        openSubCatsOptions = !openSubCatsOptions;
-    }
-
-    List<OverDraftBudgetToEdit> budgetToUpdate = new List<OverDraftBudgetToEdit>();
-    public async Task manageBudgetsToTranfer()
-    {
-        budgetToUpdate = new List<OverDraftBudgetToEdit>();
-
-        budgetToUpdate.Add(new OverDraftBudgetToEdit
-            {
-                id = chosenSubCategory.id,  // ID of chosen subcategory
-                monthlyPlannedBudget = chosenSubCategory.monthlyPlannedBudget - currentGap // Updated budget
-
-            });
-
-
-        budgetToUpdate.Add(new OverDraftBudgetToEdit
-            {
-                id = overDraftSubCategory.id, // ID of the overdraft subcategory
-                monthlyPlannedBudget = overDraftSubCategory.monthlyPlannedBudget + currentGap // Updated budget
-            });
-
-        await updateSubCategoryBudget(budgetToUpdate);
-
-    }
-
-    public async Task updateSubCategoryBudget(List<OverDraftBudgetToEdit> budgetsToUpdate)
-    {
-
-        var budgetToSaveRes = await Http.PostAsJsonAsync("api/Transactions/EditSubCategoriesNewBudgets", budgetsToUpdate);
-        if (budgetToSaveRes.IsSuccessStatusCode)
-        {
-            Console.WriteLine("התקציבים עודכנו בהצלחה :)");
-
-            overdraftDetected = false;
-            overdraftNotTreated = false;
-
-            foreach (SubCategoryToShow sub in subCategories)
-            {
-                if (sub.id == budgetsToUpdate[1].id)
-                {
-                    sub.monthlyPlannedBudget = budgetsToUpdate[1].monthlyPlannedBudget;
-                }
-                if (sub.id == budgetsToUpdate[0].id)
-                {
-                    sub.monthlyPlannedBudget = budgetsToUpdate[0].monthlyPlannedBudget;
-
-                }
-            }
-            await accordionControl();
-
-        }
-        else
-        {
-            Console.WriteLine("עדכון התקציבים נכשל");
-        }
-    }
-
-    public void NotTreatedOverdraft()
-    {
-        overdraftDetected=false;
-        overdraftNotTreated=true;
-    }
-
-    public void updateTransSumInStatTable(double trans)
-    {
-        updateTransSum.InvokeAsync(trans);
-    }
 }
